# arcsync

./: .gitignore  Readme.md  main.py.py  pyproject.toml
arcsync/: .gitignore  Readme.md  cli.py  initializer.py
arcsync/change/: logger.py
arcsync/config/: constant.py  loader.py  schema.py  settings.yaml
arcsync/pipeline/: arcgis.py  cdc.py  pipeline_manager.py  spatial_etl.py
arcsync/sink/: arcgis_online.py
arcsync/sources/: api_source.py  base.py  csv_source.py  postgress_source.py
arcsync/utils/: etl.py  exceptions.py  logger.py
config/: constant.py  schema.yaml  settings.yaml
dependencies/database/: postgress.py
etl_pipeline/: schema.py
etl_pipeline/config/: settings.yaml
notebook/: notebook.ipynb
pipeline/: arcgis.py
scripts/: config.py  etl.py  main.py
templates/: config.yaml
utils/: yaml.py
